--- a/Batreader/package.json
+++ b/Batreader/package.json
@@ -7,8 +7,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "native-base": "^2.8.0",
     "react": "16.5.0",
     "react-native": "0.57.0",
+    "react-native-elements": "^0.19.1",
+    "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.14.2"
   },
   "devDependencies": {
