--- a/Batreader/package.json
+++ b/Batreader/package.json
@@ -12,7 +12,8 @@
     "react-native": "0.57.0",
     "react-native-elements": "^0.19.1",
     "react-native-vector-icons": "^5.0.0",
-    "react-navigation": "^2.14.2"
+    "react-navigation": "^2.14.2",
+    "react-navigation-header-buttons": "^2.1.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
